Bug 463271 - Clicking account avatar/icon will open a blank user profile page
Summary: Clicking account avatar/icon will open a blank user profile page
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-20 15:51 UTC by Gary Wang
Modified: 2022-12-23 09:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gary Wang 2022-12-20 15:51:16 UTC
SUMMARY

When user get new follower, clicking the account avatar/icon of the new follower notification in "Notifications" page will open a blank user profile page instead of the proper user profile page

STEPS TO REPRODUCE
1. Get a new follower
2. Open Notification page, see the "Username followed you" message (a FollowDelegate)
3. Click the user icon/avatar in this FollowDelegate

OBSERVED RESULT

An empty profile page will be opened instead of the user you clicked.

EXPECTED RESULT

Open the profile page of the user who follows you

SOFTWARE/OS VERSIONS
Tokodon master version (currently 707fbaf3c290b4c6db4b67d28991f5adfe02e314)

ADDITIONAL INFORMATION
Let me know if you need any additional info.
Comment 1 Carl Schwan 2022-12-23 09:37:08 UTC
Git commit 716f78e2269f217df0098057049db3972b851694 by Carl Schwan.
Committed on 23/12/2022 at 09:36.
Pushed by carlschwan into branch 'master'.

Fix accountModel returned by follow activity

Signed-off-by: Carl Schwan <carl@carlschwan.eu>

M  +6    -0    src/notificationmodel.cpp

https://invent.kde.org/network/tokodon/commit/716f78e2269f217df0098057049db3972b851694