Fix accountModel returned by follow activity

BUG: 463271

Signed-off-by: Carl Schwan <carl@carlschwan.eu>